--- a/ps_t/5.html
+++ b/ps_t/5.html
@@ -21,24 +21,24 @@
 				
 				</ul>
 			</div>
-			<div class="title_wr">
+			<!-- <div class="title_wr">
 			<div class="head_title">
 				<span><p>теоретические основы</p>
 				<p>ЭЛЕКТРИЧЕСКИЕ КОЛЕБАНИЯ</p></span>
 			</div>
-			</div>
+			</div> -->
 		</div>
 	<!-- content -->
 		<div class="content_wr">
 			<div class="content">
 		<div class="sidebar">
 			<ul id="side_menu">
-				<li class="current"><a href="1.html">Тема 1. </a><a href="1.html">Квазистационарные токи</a> </li>
-				<li><a href="2.html">Тема 2. </a><a href="2.html">Свободные электрические колебания в контуре без активного сопротивления</a></li>
-				<li><a href="3.html">Тема 3.</a><a href="3.html"> Свободные затухающие колебания</a></li>
-				<li><a href="4.html">Тема 4.</a><a href="4.html"> Вынужденные электрические колебания. Резонанс напряжений</a></li>
-				<li><a href="5.html">Тема 5.</a><a href="5.html"> Переменный ток. Резонанс тока</a></li>
-				<li><a href="6.html">Тема 6.</a><a href="6.html"> Мощность тока</a></li>
+				<li><a href="1.html">Квазистационарные токи</a> </li>
+				<li><a href="2.html">Свободные электрические колебания в контуре без активного сопротивления</a></li>
+				<li><a href="3.html">Свободные затухающие колебания</a></li>
+				<li><a href="4.html">Вынужденные электрические колебания. Резонанс напряжений</a></li>
+				<li class="current"><a href="5.html">Переменный ток. Резонанс тока</a></li>
+				<li><a href="6.html">Мощность тока</a></li>
 			</ul>
 		</div>
 		<div class="content_box">
@@ -104,9 +104,9 @@
 		
 		
 	<!-- footer -->	
-		<div class="footer_wr">
+		<!-- <div class="footer_wr">
 
-		</div>
+		</div> -->
 	
-	<div id="toTop"> ^ Наверх <!-- DIV -->
+	<div id="toTop"> ^ НАВЕРХ <!-- DIV -->
 </div></body></html>
